--- a/test/fixtures/activities.yml
+++ b/test/fixtures/activities.yml
@@ -1,11 +1,49 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+activity1:
+    title: aviamodelling
+    description: spamspamspamspamspamspamspamspamspam
+    users_rating: 4.5
+    experts_rating: 5.0
+    organization_id: 1
+    metro_station_id: 1
+    address: randaddr1
+    is_educational: true
+    
+activity2:
+    title: dances
+    description: spamspamspamspamspamspamspamspamspam
+    users_rating: 4.7
+    experts_rating: 5.0
+    organization_id: 2
+    metro_station_id: 1
+    address: randaddr2
+    is_educational: false
+    
+activity3:
+    title: physics
+    description: spamspamspamspamspamspamspamspamspam
+    users_rating: 2.0
+    experts_rating: 5.0
+    organization_id: 2
+    metro_station_id: 3
+    address: randaddr3
+    is_educational: true
+    
+activity4:
+    title: vodkadrinking
+    description: thisisrussia
+    users_rating: 5.0
+    experts_rating: 5.0
+    organization_id: 3
+    metro_station_id: 3
+    address: randaddr3
+    is_educational: false
+    
+activity5:
+    title: vodkadrinking
+    description: thisisrussia
+    users_rating: 1.0
+    experts_rating: 5.0
+    organization_id: 4
+    metro_station_id: 3
+    address: randaddr3
+    is_educational: true
