--- a/db/sample/activity_comments.yml
+++ b/db/sample/activity_comments.yml
@@ -2,5 +2,5 @@
 comment_<%= i %>:
   commentator: <%= Faker::Name.name %>
   content: "<%= Faker::Lorem.words(6).join(' ') %>"
-  isParent: <%= (rand(2)) == 1 ? true : false %>
+  is_parent: <%= (rand(2)) == 1 ? true : false %>
 <% end %>
