add cucumber work on tickets BRI-26 BRI-27

--- a/db/sample/users.yml
+++ b/db/sample/users.yml
@@ -4,6 +4,16 @@ user_<%= i %>:
   role: user
 <% end %>
 
+<% 11.upto(20).each do |i| %>
+specialist_<% i %>:
+  email: <%= Faker::Internet.email %>
+  role: specialist
+<% end %>
+
 specialist:
   email: specialist@example.com
   role: specialist
+
+user:
+  email: user@example.com
+  role: user
