add samples question and rake task db:setup_sample

--- a/db/sample/users.yml
+++ b/db/sample/users.yml
@@ -6,10 +6,11 @@ user_<%= i %>:
 <% end %>
 
 <% 11.upto(20).each do |i| %>
-specialist_<% i %>:
+specialist_<%= i %>:
   email: <%= Faker::Internet.email %>
   role_id: 4
   name: <%= Faker::Name.name %>
+  description: <%= Faker::Lorem.words %>
 <% end %>
 
 specialist:
