--- a/db/sample/users.yml
+++ b/db/sample/users.yml
@@ -10,7 +10,7 @@ specialist_<%= i %>:
   email: <%= Faker::Internet.email %>
   role_id: 4
   name: <%= Faker::Name.name %>
-  description: <%= Faker::Lorem.words %>
+  description: <%= Faker::Lorem.words.join(' ') %>
 <% end %>
 
 specialist:
