work with polymorphic comments

--- a/db/sample/users.yml
+++ b/db/sample/users.yml
@@ -1,12 +1,16 @@
+# Simple users
 <% 1.upto(10).each do |i| %>
 user_<%= i %>:
+  id: <%= i %>
   email: <%= Faker::Internet.email %>
   role_id: 1
   name: <%= Faker::Name.name %>
 <% end %>
 
+# Specialists
 <% 11.upto(20).each do |i| %>
 specialist_<%= i %>:
+  id: <%= i %>
   email: <%= Faker::Internet.email %>
   role_id: 4
   name: <%= Faker::Name.name %>
@@ -14,6 +18,7 @@ specialist_<%= i %>:
 <% end %>
 
 specialist:
+  id: 111
   email: specialist@example.com
   role_id: 4
   name: <%= Faker::Name.name %>
