add comment for question

--- a/db/sample/questions.yml
+++ b/db/sample/questions.yml
@@ -3,7 +3,7 @@
 question_<%= i %>:
   id: <%= i %>
   text: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
-  user: user_<%= rand(10) + 1 %>
-  specialist: specialist
+  user_id: <%= rand(10) + 1 %>
+  specialist_id: 111
   question_category_id: <%= rand(10) + 1 %>
 <% end %>
