--- a/db/sample/articles.yml
+++ b/db/sample/articles.yml
@@ -1,7 +1,17 @@
-<% 1.upto(20).each do |i| %>
+<% 1.upto(10).each do |i| %>
 article_<%= i %>:
   id: <%= i %>
   title: <%= Faker::Lorem.words.join(' ') %>
   content: "<%= Faker::Lorem.paragraphs(5).join('\n') %>"
   author: <%= Faker::Name.name %>
+  article_category_id: <%= rand(3) + 1 %>
+<% end %>
+
+<% 11.upto(15).each do |i| %>
+article_<%= i %>:
+  id: <%= i %>
+  title: <%= Faker::Lorem.words.join(' ') %>
+  content: "<%= Faker::Lorem.paragraphs(5).join('\n') %>"
+  author: <%= Faker::Name.name %>
+  article_category_id: 111
 <% end %>
