--- a/db/sample/sponsors.yml
+++ b/db/sample/sponsors.yml
@@ -1,4 +1,5 @@
 <% 1.upto(10).each do |i| %>
 sponsor_<%= i %>:
-  name: <%= Faker::Name.name %>
+  first_name: <%= Faker::Name.first_name %>
+  last_name: <%= Faker::Name.last_name %>
 <% end %>
