added short_description field to articles and interviews, articles & interviews show views styled

--- a/db/sample/interviews.yml
+++ b/db/sample/interviews.yml
@@ -3,5 +3,6 @@ interview_<%= i %>:
   id: <%= i %>
   title: <%= Faker::Lorem.words.join(' ') %>
   content: "<%= Faker::Lorem.paragraphs(5).join('\n') %>"
+  short_description: "<%= Faker::Lorem.paragraphs(1).join('\n') %>"
   author: <%= Faker::Name.name %>
 <% end %>
