--- a/db/sample/articles.yml
+++ b/db/sample/articles.yml
@@ -3,6 +3,7 @@ article_<%= i %>:
   id: <%= i %>
   title: <%= Faker::Lorem.words.join(' ') %>
   content: "<%= Faker::Lorem.paragraphs(5).join('\n') %>"
+  short_description: "<%= Faker::Lorem.paragraphs(1).join('\n') %>"
   author: <%= Faker::Name.name %>
   article_category_id: <%= rand(3) + 1 %>
 <% end %>
@@ -12,6 +13,7 @@ article_<%= i %>:
   id: <%= i %>
   title: <%= Faker::Lorem.words.join(' ') %>
   content: "<%= Faker::Lorem.paragraphs(5).join('\n') %>"
+  short_description: "<%= Faker::Lorem.paragraphs(1).join('\n') %>"
   author: <%= Faker::Name.name %>
   article_category_id: 111
 <% end %>
