authors changed from string field to association with user model, added description field for user

--- a/db/sample/users.yml
+++ b/db/sample/users.yml
@@ -5,6 +5,7 @@ user_<%= i %>:
   email: <%= Faker::Internet.email %>
   role_id: 1
   name: <%= Faker::Name.name %>
+  description: "<%= Faker::Lorem.sentences(3).join(' ') %>"
 <% end %>
 
 user:
