--- a/db/sample/teachers.yml
+++ b/db/sample/teachers.yml
@@ -1,6 +1,17 @@
-<% 1.upto(10).each do |i| %>
-teacher_<%= i %>:
-  id: <%= i %>
+common: &common
   name: <%= Faker::Name.name %>
   description: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
+
+# Teacher for main test education activity
+<% 1.upto(10).each do |i| %>
+teacher_<%= i %>:
+  activity_id: 1
+  <<: *common
+<% end %>
+
+# Teacher for main test not education activity
+<% 11.upto(20).each do |i| %>
+teacher_<%= i %>:
+  activity_id: 2
+  <<: *common
 <% end %>
