interviews preview via is_enabled field in model and cancan ability view_disabled

--- a/db/sample/interviews.yml
+++ b/db/sample/interviews.yml
@@ -6,4 +6,5 @@ interview_<%= i %>:
   short_description: "<%= Faker::Lorem.paragraphs(1).join('\n') %>"
   review: "<%= Faker::Lorem.paragraphs(1).join('\n') %>"
   review_title: <%= Faker::Lorem.words.join(' ') %>
+  is_enabled: true
 <% end %>
