add expert role

--- a/db/default/roles.yml
+++ b/db/default/roles.yml
@@ -1,11 +1,15 @@
 user:
-  id: 1  
+  id: 1
   name: user
 
 admin:
-  id: 2  
+  id: 2
   name: admin
 
 editor:
-  id: 3  
+  id: 3
   name: editor
+
+expert:
+  id: 4
+  name: expert
