--- a/db/sample/activities.yml
+++ b/db/sample/activities.yml
@@ -31,11 +31,11 @@ main_not_edication_activity:
   additional_information: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   region_id: <%= rand(10) + 1 %>
 
-<% 3.upto(30).each do |i| %>
+<% 3.upto(20).each do |i| %>
 activity_<%= i %>:
   title: <%= Faker::Lorem.words.join(' ') %>
   id: <%= i %>
-  is_educational: <%= rand(2) == 1 ? true : false %>
+  is_educational: true
   description: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   organization_id: <%= rand(10) + 1 %>
   users_rating: <%= rand(5) + 1 %>
