--- a/db/sample/activity_approvals.yml
+++ b/db/sample/activity_approvals.yml
@@ -1,7 +1,7 @@
 # approval main activities
 ap_main_edu_ac:
   text: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
-  user_id: <%= rand(20) + 1 %>
+  user_id: <%= rand(11..20) %>
   activity_id: 1
 
 ap_main_no_edu_ac:
@@ -12,6 +12,6 @@ ap_main_no_edu_ac:
 <% 3.upto(rand(20)).each do |i| %>
 rand_approved_<%= i %>:
   text: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
-  expert_id: <%= rand(10) + 1 %>
+  user_id: <%= rand(11..20) %>
   activity_id: <%= i %>
 <% end %>
