add mentions rendering on expert page

--- a/db/sample/comments.yml
+++ b/db/sample/comments.yml
@@ -2,7 +2,7 @@
 <% 6.upto(15).each do |i| %>
 comment_<%= i %>:
   text: "<%= Faker::Lorem.paragraphs.join('\n') %>"
-  user_id: <%= rand(10) + 1 %>
+  user_id: <%= rand(1..20) %>
   relation_type: Article
   relation_id: <%= rand(5) + 1 %>
 <% end %>
