--- a/db/sample/contest_memberships.yml
+++ b/db/sample/contest_memberships.yml
@@ -2,5 +2,5 @@
 membership_<%= i %>:
   id: <%= i %>
   name: <%= Faker::Lorem.words.join(' ') %>
-  description: "<%= Faker::Lorem.sentences(3).join('. ') %>"
+  description: "<%= Faker::Lorem.sentences(3).join(' ') %>"
 <% end %>
