--- a/db/sample/comments.yml
+++ b/db/sample/comments.yml
@@ -1,7 +1,7 @@
 # Comments for articles
 <% 6.upto(15).each do |i| %>
 comment_<%= i %>:
-  text: "<%= Faker::Lorem.paragraphs.join('\n') %>"
+  text: "<%= Faker::Lorem.sentences(2).join(' ') %>"
   user_id: <%= rand(1..20) %>
   relation_type: Article
   relation_id: <%= rand(5) + 1 %>
