--- a/db/sample/activity_approvals.yml
+++ b/db/sample/activity_approvals.yml
@@ -9,9 +9,9 @@ ap_main_no_edu_ac:
   user_id: <%= rand(11..20) %>
   activity_id: 2
 
-<% 3.upto(rand(20)).each do |i| %>
+<% rand(3..20).times.each do |i| %>
 rand_approved_<%= i %>:
   text: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   user_id: <%= rand(11..20) %>
-  activity_id: <%= i %>
+  activity_id: <%= rand(3..20) %>
 <% end %>
