sponsors pictures and views

--- a/db/sample/sponsors.yml
+++ b/db/sample/sponsors.yml
@@ -2,4 +2,5 @@
 sponsor_<%= i %>:
   first_name: <%= Faker::Name.first_name %>
   last_name: <%= Faker::Name.last_name %>
+  description: "<%= Faker::Lorem.paragraphs(3).join("\n") %>"
 <% end %>
