fix activity samples and create published feature to activity

--- a/db/sample/activities.yml
+++ b/db/sample/activities.yml
@@ -14,6 +14,7 @@ main_education_activity:
   additional_information: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   region_id: <%= rand(1..8) %>
   participant: true
+  published: true
 
 main_not_edication_activity:
   title: Main test not education activity
@@ -31,6 +32,7 @@ main_not_edication_activity:
   additional_information: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   region_id: <%= rand(1..8) %>
   participant: true
+  published: true
 
 <% 3.upto(12).each do |i| %>
 activity_<%= i %>:
@@ -49,6 +51,7 @@ activity_<%= i %>:
   additional_information: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   region_id: <%= rand(1..8) %>
   participant: <%= rand(2) == 1 ? true : false %>
+  published: <%= (rand(2) == 1) ? true : false %>
 <% end %>
 
 <% 13.upto(20).each do |i| %>
@@ -68,5 +71,6 @@ activity_<%= i %>:
   additional_information: "<%= Faker::Lorem.paragraphs(3).join('\n') %>"
   region_id: <%= rand(1..8) %>
   participant: <%= rand(2) == 1 ? true : false %>
+  published: <%= (rand(2) == 1) ? true : false %>
 <% end %>
 
