--- a/db/default/direction_tags.yml
+++ b/db/default/direction_tags.yml
@@ -24,12 +24,16 @@ traning:
 
 art:
   name: Искуство
+  is_educational: false
 
 nature:
   name: Природа
+  is_educational: false
 
 science:
   name: Наука
+  is_educational: false
 
 activities:
-  name: Активный отдых  
+  name: Активный отдых
+  is_educational: false
