--- a/db/sample/activities.yml
+++ b/db/sample/activities.yml
@@ -15,6 +15,8 @@ main_education_activity:
   region_id: <%= rand(1..8) %>
   participant: true
   published: true
+  start_age: <%= st_age = rand(1..16) %>
+  end_age: <%= st_age == 16 ? 16 : st_age + 1 %>
 
 main_not_edication_activity:
   title: Main test not education activity
@@ -33,6 +35,8 @@ main_not_edication_activity:
   region_id: <%= rand(1..8) %>
   participant: true
   published: true
+  start_age: <%= st_age = rand(1..16) %>
+  end_age: <%= st_age == 16 ? 16 : st_age + 1 %>
 
 <% 3.upto(12).each do |i| %>
 activity_<%= i %>:
@@ -52,6 +56,8 @@ activity_<%= i %>:
   region_id: <%= rand(1..8) %>
   participant: <%= rand(2) == 1 ? true : false %>
   published: <%= (rand(2) == 1) ? true : false %>
+  start_age: <%= st_age = rand(1..16) %>
+  end_age: <%= st_age == 16 ? 16 : st_age + 1 %>
 <% end %>
 
 <% 13.upto(20).each do |i| %>
@@ -72,5 +78,7 @@ activity_<%= i %>:
   region_id: <%= rand(1..8) %>
   participant: <%= rand(2) == 1 ? true : false %>
   published: <%= (rand(2) == 1) ? true : false %>
+  start_age: <%= st_age = rand(1..16) %>
+  end_age: <%= st_age == 16 ? 16 : st_age + 1 %>
 <% end %>
 
