--- a/db/sample/users.yml
+++ b/db/sample/users.yml
@@ -24,3 +24,10 @@ user:
   email: user@example.com
   name: <%= Faker::Name.name %>
   role_id: 1
+
+# moderator
+moderator:
+  id: 25
+  email: moder@example.com
+  role_id: 5
+  name: <%= Faker::Name.name %>
