--- a/db/default/pages.yml
+++ b/db/default/pages.yml
@@ -6,6 +6,7 @@ about_festival:
     <ul>
     <li class="about_ico active"><a href="/pages/about_festival">О фестивале</a></li>
     <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
+    <li class="participants_ico"><a href="/participants">Участники фестиваля</a></li>
     </ul>
     <div class="clear">
     </div>
@@ -75,6 +76,7 @@ org_komitet:
     <ul>
     <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
     <li class="org_ico active"><a href="/pages/org_komitet">Оргкомитет</a></li>
+    <li class="participants_ico"><a href="/participants">Участники фестиваля</a></li>
     </ul>
     <div class="clear">
     </div>
@@ -192,7 +194,7 @@ about_bank:
     <div class="director_info">
     <div class="director_info_wrapper">
     <div class="thumb">
-    <img src="/assets/nikolashev.png" alt="" />
+    <img src="/assets/nikolashin.png" alt="" />
     </div>
     <div class="who">
     Президент МОСКОВСКОГО КРЕДИТНОГО БАНКА<br />Александр НИКОЛАШИН
