--- a/db/default/pages.yml
+++ b/db/default/pages.yml
@@ -7,6 +7,7 @@ about_festival:
     <li class="about_ico active"><a href="/pages/about_festival">О фестивале</a></li>
     <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
     <li class="participants_ico"><a href="/participants">Участники фестиваля</a></li>
+    <li class="news_ico"><a href="/news">Новости фестиваля</a></li>
     </ul>
     <div class="clear">
     </div>
@@ -77,6 +78,7 @@ org_komitet:
     <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
     <li class="org_ico active"><a href="/pages/org_komitet">Оргкомитет</a></li>
     <li class="participants_ico"><a href="/participants">Участники фестиваля</a></li>
+    <li class="news_ico"><a href="/news">Новости фестиваля</a></li>
     </ul>
     <div class="clear">
     </div>
