--- a/db/default/pages.yml
+++ b/db/default/pages.yml
@@ -6,6 +6,8 @@ about_festival:
     <ul>
     <li class="about_ico active"><a href="/pages/about_festival">О фестивале</a></li>
     <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
+    <li class="participants_ico"><a href="/participants">Сцены</a></li>
+    <li class="creative_ico"><a href="">Творческая группа</a></li>
     </ul>
     <div class="clear">
     </div>
@@ -75,6 +77,8 @@ org_komitet:
     <ul>
     <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
     <li class="org_ico active"><a href="/pages/org_komitet">Оргкомитет</a></li>
+    <li class="participants_ico"><a href="/participants">Сцены</a></li>
+    <li class="creative_ico"><a href="">Творческая группа</a></li>
     </ul>
     <div class="clear">
     </div>
