--- a/db/default/pages.yml
+++ b/db/default/pages.yml
@@ -5,9 +5,10 @@ about_festival:
     <div class="post_category_menu">
     <ul>
     <li class="about_ico active"><a href="/pages/about_festival">О фестивале</a></li>
-    <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
-    <li class="participants_ico"><a href="/participants">Сцены</a></li>
     <li class="creative_ico"><a href="">Творческая группа</a></li>
+    <li class="participants_ico"><a href="/participants?category=music_stage">Программа</a></li>
+    <li class="headliners_ico"><a href="/participants">Хэдлайнеры</a></li>
+    <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
     </ul>
     <div class="clear">
     </div>
@@ -76,9 +77,10 @@ org_komitet:
     <div class="post_category_menu">
     <ul>
     <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
-    <li class="org_ico active"><a href="/pages/org_komitet">Оргкомитет</a></li>
-    <li class="participants_ico"><a href="/participants">Сцены</a></li>
     <li class="creative_ico"><a href="">Творческая группа</a></li>
+    <li class="participants_ico"><a href="/participants?category=music_stage">Программа</a></li>
+    <li class="headliners_ico"><a href="/participants">Хэдлайнеры</a></li>
+    <li class="org_ico active"><a href="/pages/org_komitet">Оргкомитет</a></li>
     </ul>
     <div class="clear">
     </div>
