--- a/spec/fixtures/roles.yml
+++ b/spec/fixtures/roles.yml
@@ -1,15 +1,19 @@
 user:
-  id: 1  
+  id: 1
   name: user
 
 admin:
-  id: 2  
+  id: 2
   name: admin
 
 editor:
-  id: 3  
+  id: 3
   name: editor
 
-specialist:
-  id: 4  
-  name: specialist
+expert:
+  id: 4
+  name: expert
+
+manager:
+  id: 5
+  name: manager
