reduce sample data. Create photographer roles. Add it's to admin

--- a/db/default/roles.yml
+++ b/db/default/roles.yml
@@ -21,3 +21,11 @@ manager:
 author:
   id: 6
   name: author
+
+photographer:
+  id: 7
+  name: photographer
+
+main_photographer:
+  id: 8
+  name: main_photographer
