fix sample festival categories

--- a/db/sample/festival_categories.yml
+++ b/db/sample/festival_categories.yml
@@ -1,5 +1,5 @@
 <% 1.upto(5).each do |i| %>
 festival_category_<%= i %>:
   id: <%= i %>
-  title: <%= Faker::Lorem.words.join(' ') %>
+  title: festival category <%= i %>
 <% end %>
